--- a/.env
+++ b/.env
@@ -3,4 +3,5 @@ HERSTASIS_LOGIN_PASSWORD=Q!qweqwe123
 SMTP_GMAIL_APP_PASSWORD=oqygcnxnygaxfsta
 MAILER_PASSWORD=pjgpeuzmbufnmnne
 MAILER_SCRIPT_LOGIN_URL=https://app.herstasis.com/auth/login
+MAILER_SCRIPT_GET_USERS_URL=https://app.herstasis.com/api/user
 EMAIL_TO=andrey@wewearmanyhats.com
